Aggiunta immagine, modifica su font e colore della nav bar e logo

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                   <div class="header-table col-md-12">
                      <div class="brand">
                         <a href="index.html">
+                           <img src="/images/imglogo.png" alt="">
                            <span>VSB-MOTORS</span>
                         </a>
                      </div>
