--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
    <link href='http://fonts.googleapis.com/css?family=Raleway:400,800,500,600,300,700' rel='stylesheet' type='text/css'>
    <!-- ionicons Fonts for icons -->
    <link href="css/ionicons.min.css" rel="stylesheet">
+   <!--Font for nav-bar-->
+   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Orbitron" />
    <!-- bootstrap -->
    <link href="css/bootstrap.css" rel="stylesheet">
    <!-- Styles CSS-->
@@ -43,7 +45,6 @@
                      <div class="brand">
                         <a href="index.html">
                            <img src="/images/imglogo.png" alt="">
-                           <span>VSB-Motors</span>
                         </a>
                      </div>
                      <nav id="nav-wrap" class="main-nav">
