add all file of website

--- a/index.html
+++ b/index.html
@@ -60,10 +60,7 @@
                               <a href="#">Sell your car</a>
                            </li>
                            <li>
-                              <a href="#">Login</a>
-                           </li>
-                           <li>
-                              <a href="#">Sign-Up</a>
+                              <a href="sign_up.html">Sign-Up</a>
                            </li>
                            <li class="menu-search-bar">
                               <a id="search-label"><i class="ion-search"></i></a>
@@ -188,7 +185,11 @@
                <div class="story-bio">
                   <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat,</p>
                </div>
-               <a href="https://vimeo.com/134683854" class="video-play-trigger"><i class="icon-play ion-ios-play"></i></a>
+               <video width="320" height="240" controls>
+                  <source src="movie.mp4" type="video/mp4">
+                  <source src="movie.ogg" type="video/ogg">
+                  Your browser does not support the video tag.
+                </video>
             </div>
          </div>
       </div>
@@ -605,7 +606,7 @@
             <div class="row">
                <div class="col-md-3">
                   <div class="footer-widget">
-                     <a href="index.html"><img class="footer-logo" src="images/logo.png" alt="Enfold"></a>
+                     <a href="index.html"><h4 class="footer-widget-title">VSB-Motors</h4></a>
                      <p>Dow wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl. Duis autem vel eum iriure dolor in hendrerit.</p>
                   </div>
                </div>
