modified all file

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                               <a href="index.html">Home</a>
                            </li>
                            <li>
-                              <a href="#">Shop</a>                             
+                              <a href="shop.html">Shop</a>                             
                            </li>
                            <li>
-                              <a href="#">Sell your car</a>
+                              <a href="sell_my_car.html">Sell your car</a>
                            </li>
                            <li>
                               <a href="sign_up.html">Sign-Up</a>
