--- a/shop.html
+++ b/shop.html
@@ -4,9 +4,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    
+    <title>SHOP</title>
+   <!-- ionicons Fonts for icons -->
+   <link href="css/ionicons.min.css" rel="stylesheet">
+   <!--Font for nav-bar-->
+   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Orbitron" />
+   <!-- bootstrap -->
+   <link href="css/bootstrap.css" rel="stylesheet">
+   <!-- Styles CSS-->
+   <link href="css/shop.css" rel="stylesheet">
 </head>
 <body>
-    
+   <div class="header-inner">
+      <!-- navigation panel -->
+      <div class="container">
+         <div class="row">
+            <div class="header-table col-md-12">
+               <div class="brand">
+                  <a href="index.html">
+                     <img src="/images/imglogo.png" alt="">
+                  </a>
+               </div>
+               <nav id="nav-wrap" class="main-nav">
+                  <div id="mobnav-btn"> </div>
+                  <ul class="sf-menu">
+                     <li>
+                        <a href="index.html">Home</a>
+                     </li>
+                     <li>
+                        <a href="shop.html">Shop</a>                             
+                     </li>
+                     <li>
+                        <a href="sell_my_car.html">Sell your car</a>
+                     </li>
+                     <li>
+                        <a href="sign_up.html">Sign-Up</a>
+                     </li>
+                     <li class="menu-search-bar">
+                        <a id="search-label"><i class="ion-search"></i></a>
+                        <form class="search-bar" id="searchform">
+                           <input type="text" placeholder="Search..." name="s">
+                        </form>
+                     </li>
+                  </ul>
+               </nav>
+            </div>
+         </div>
+      </div>
+   </div>
+
+   <div class="container">
+      <div class="row">
+         <div class="col">
+            <h4 class="title_car" name="marca_modello">Mercedes-Benz Classe A</h4>
+            <img src="images/car1.jpg" alt="">
+            <br>
+            <h4>€ 1500</h4>
+            <br>
+            <div class="row2">
+               <div class="col2">
+                  <p>175.000 km</p>
+                  <p>2007</p>
+                  <p>70kW</p>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
 </body>
 </html>
