modifiche su icona home, se confermi che va bene la modifico su tutte le pag

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
  
    <title>VSB-MOTORS</title>
+   <!--From fontawesome.com-->
+   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
    <!-- Google Fonts -->
    <link href='http://fonts.googleapis.com/css?family=Raleway:400,800,500,600,300,700' rel='stylesheet' type='text/css'>
    <!-- ionicons Fonts for icons -->
@@ -60,14 +62,13 @@
                               <a href="sell_my_car.html">Sell your car</a>
                            </li>
                            <li>
-                              <a href="sign_up.html">Sign-Up</a>
+                              <a href="login.html">
+                                 <button type="button">
+                                    <i class='fa fa-user-circle-o'></i><span>Accedi</span>
+                                 </button>
+                              </a>
                            </li>
-                           <li class="menu-search-bar">
-                              <a id="search-label"><i class="ion-search"></i></a>
-                              <form class="search-bar" id="searchform">
-                                 <input type="text" placeholder="Search..." name="s">
-                              </form>
-                           </li>
+
                         </ul>
                      </nav>
                   </div>
