--- a/sell_my_car.html
+++ b/sell_my_car.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>SHOP</title>
+    <title>VSB-MOTORS/SELL-MY-CAR</title>
    <!-- ionicons Fonts for icons -->
    <link href="css/ionicons.min.css" rel="stylesheet">
    <!--Font for nav-bar-->
