modify user icon on navbar

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
    <link href="css/style.css" rel="stylesheet">
    <!-- Animate CSS-->
    <link href="css/animate.css" rel="stylesheet">
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
    <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -62,11 +63,8 @@
                            <li>
                               <a href="sign_up.html">Sign-Up</a>
                            </li>
-                           <li class="menu-search-bar">
-                              <a id="search-label"><i class="ion-search"></i></a>
-                              <form class="search-bar" id="searchform">
-                                 <input type="text" placeholder="Search..." name="s">
-                              </form>
+                           <li>
+                              <h4 class="user_icon"><i class="bi bi-person-fill"></i></h4>
                            </li>
                         </ul>
                      </nav>
