--- a/sell_my_car.html
+++ b/sell_my_car.html
@@ -14,6 +14,7 @@
    <link href="css/bootstrap.css" rel="stylesheet">
    <!-- Styles CSS-->
    <link href="css/sell_my_car.css" rel="stylesheet">
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
 <body>
    <div class="header-inner">
