--- a/index.html
+++ b/index.html
@@ -66,7 +66,12 @@
                               <a href="sell_my_car.html">Sell your car</a>
                            </li>
                            <li>
-
+                              <a href="login.html">
+                                 <button type="button">
+                                    <i class='fa fa-user-circle-o'></i><span>Accedi</span>
+                                 </button>
+                              </a>
+                           </li>
 
                         </ul>
                      </nav>
