modify user icon

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                               <a href="sign_up.html">Sign-Up</a>
                            </li>
                            <li>
-                              <h4 class="user_icon"><i class="bi bi-person-fill"></i></h4>
+                              <h4 class="user_icon"><i class="bi bi-person-circle"></i><!--<i class="bi bi-person-fill">--></i></h4>
                            </li>
                         </ul>
                      </nav>
