--- a/sell_my_car.html
+++ b/sell_my_car.html
@@ -43,7 +43,7 @@
                         <a href="sign_up.html">Sign-Up</a>
                      </li>
                      <li>
-                        <h4 class="user_icon"><i class="bi bi-person-fill"></i></h4>
+                        <h4 class="user_icon"><i class="bi bi-person-circle"></i><!--<i class="bi bi-person-fill">--></i></h4>
                         <!--<a id="search-label"><i class="ion-search"></i></a>
                         <form class="search-bar" id="searchform">
                         <input type="text" placeholder="Search..." name="s">
