--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
  
-<<<<<<< HEAD
    <title>VSB-MOTORS</title>
    <!--From fontawesome.com-->
    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
-=======
+
    <title>VSB-MOTORS/HOMEPAGE</title>
->>>>>>> 5fce2e2503c0ca28f813b59cd2feeb77c1ac2fa3
    <!-- Google Fonts -->
    <link href='http://fonts.googleapis.com/css?family=Raleway:400,800,500,600,300,700' rel='stylesheet' type='text/css'>
    <!-- ionicons Fonts for icons -->
@@ -70,7 +68,7 @@
                               <a href="sign_up.html">Sign-Up</a>
                            </li>
                            <li>
-                              <h4 class="user_icon"><i class="bi bi-person-fill"></i></h4>
+                              <h4 class="user_icon"><!--<i class="bi bi-person-fill"></i>--><i class="bi bi-person-circle"></i></h4>
                            </li>
 
                         </ul>
