--- a/sell_my_car.html
+++ b/sell_my_car.html
@@ -40,7 +40,7 @@
                         <a href="sell_my_car.html">Sell your car</a>
                      </li>
                      <li>
-                        <a href="sign_up.html">Sign-Up</a>
+                        <a href="about_us.html">About Us</a>
                      </li>
                      <li>
                         <h4 class="user_icon"><!--<i class="bi bi-person-fill"></i>--><i class="bi bi-person-circle"></i></h4>                        <!--<a id="search-label"><i class="ion-search"></i></a>
