--- a/index.html
+++ b/index.html
@@ -65,12 +65,11 @@
                               <a href="sell_my_car.html">Sell your car</a>
                            </li>
                            <li>
-                              <a href="about_us.html">About Us</a>
+                              <a href="index.html/#about_us">About Us</a>
                            </li>
                            <li>
                               <h4 class="user_icon"><!--<i class="bi bi-person-fill"></i>--><i class="bi bi-person-circle"></i></h4>
                            </li>
-
                         </ul>
                      </nav>
                   </div>
@@ -110,86 +109,88 @@
       </div>
       <!-- End Slider -->
       <!-- About Section -->
-      <div class="container-about">
-         <div class="container">
-            <div class="row">
-               <div class="col-md-12">
-                  <h3 class="title-un">WHO WE ARE</h3>
-                  <div class="title-un-icon"><i class="fa ion-ios-flame-outline"></i></div>
-                  <p class="title-un-des">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, </p>
+      <a name="about_us">
+         <div class="container-about">
+            <div class="container">
+               <div class="row">
+                  <div class="col-md-12">
+                     <h3 class="title-un">WHO WE ARE</h3>
+                     <div class="title-un-icon"><i class="fa ion-ios-flame-outline"></i></div>
+                     <p class="title-un-des">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, </p>
+                  </div>
                </div>
-            </div>
-            <div class="row">
-               <div class="col-md-4">
-                  <!-- Service item -->
-                  <div class="service-box-sb wow fadeInUp">
-                     <div class="service-img">
-                        <img src="images/sas.jpg" alt="Enfold">
-                     </div>
-                     <div class="service-info">
-                        <h5>VENDORS</h5>
-                        <div class="desc">
-                           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris iaculis sapien sit amet arcu ornare, non commodo ligula consectetur adipiscing elit.
-                           <a class="see-more" href="#">
-                        See More &rarr;
-                        <div class="line"></div>
-                      </a>
+               <div class="row">
+                  <div class="col-md-4">
+                     <!-- Service item -->
+                     <div class="service-box-sb wow fadeInUp">
+                        <div class="service-img">
+                           <img src="images/sas.jpg" alt="Enfold">
+                        </div>
+                        <div class="service-info">
+                           <h5>VENDORS</h5>
+                           <div class="desc">
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris iaculis sapien sit amet arcu ornare, non commodo ligula consectetur adipiscing elit.
+                              <a class="see-more" href="#">
+                           See More &rarr;
+                           <div class="line"></div>
+                        </a>
+                           </div>
                         </div>
                      </div>
+                     <!-- End Service item -->
                   </div>
-                  <!-- End Service item -->
-               </div>
-               <div class="col-md-4">
-                  <!-- Service item -->
-                  <div class="service-box-sb wow fadeInUp" data-wow-delay=".2s">
-                     <div class="service-img">
-                        <img src="images/sasa.jpg" alt="Enfold">
-                     </div>
-                     <div class="service-info">
-                        <h5>VSB-MOTORS</h5>
-                        <div class="desc">
-                           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris iaculis sapien sit amet arcu ornare, non commodo ligula consectetur adipiscing elit.
-                           <a class="see-more" href="#">
-                        See More &rarr;
-                        <div class="line"></div>
-                      </a>
+                  <div class="col-md-4">
+                     <!-- Service item -->
+                     <div class="service-box-sb wow fadeInUp" data-wow-delay=".2s">
+                        <div class="service-img">
+                           <img src="images/sasa.jpg" alt="Enfold">
+                        </div>
+                        <div class="service-info">
+                           <h5>VSB-MOTORS</h5>
+                           <div class="desc">
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris iaculis sapien sit amet arcu ornare, non commodo ligula consectetur adipiscing elit.
+                              <a class="see-more" href="#">
+                           See More &rarr;
+                           <div class="line"></div>
+                        </a>
+                           </div>
                         </div>
                      </div>
+                     <!-- End Service item -->
                   </div>
-                  <!-- End Service item -->
-               </div>
-               <div class="col-md-4">
-                  <!-- Service item -->
-                  <div class="service-box-sb wow fadeInUp" data-wow-delay=".4s">
-                     <div class="service-img">
-                        <img src="images/sasaa.jpg" alt="Enfold">
-                     </div>
-                     <div class="service-info">
-                        <h5>CLIENT</h5>
-                        <div class="desc">
-                           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris iaculis sapien sit amet arcu ornare, non commodo ligula consectetur adipiscing elit.
-                           <a class="see-more" href="#">See More &rarr;<div class="line"></div></a>
+                  <div class="col-md-4">
+                     <!-- Service item -->
+                     <div class="service-box-sb wow fadeInUp" data-wow-delay=".4s">
+                        <div class="service-img">
+                           <img src="images/sasaa.jpg" alt="Enfold">
+                        </div>
+                        <div class="service-info">
+                           <h5>CLIENT</h5>
+                           <div class="desc">
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris iaculis sapien sit amet arcu ornare, non commodo ligula consectetur adipiscing elit.
+                              <a class="see-more" href="#">See More &rarr;<div class="line"></div></a>
+                           </div>
                         </div>
                      </div>
+                     <!-- End Service item -->
                   </div>
-                  <!-- End Service item -->
                </div>
             </div>
          </div>
-      </div>
+      </a>   
       <!-- End About Section -->
       <!-- Story Section -->
       <div class="story-container">
          <div class="story-wrapper wow fadeInUp">
             <div class="story-info ">
-               <div class="big-font-title">
+               <!--<div class="big-font-title">
                   <h1>We do something special </h1>
                </div>
                <div class="story-bio">
                   <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat,</p>
-               </div>
-               <video width="320" height="240" controls>
-                  <source src="movie.mp4" type="video/mp4">
+               </div>-->
+               <video width="1400" height="600" autoplay muted loop>
+                  <source src="video/video1.mp4" type="video/mp4">
                   <source src="movie.ogg" type="video/ogg">
                   Your browser does not support the video tag.
                 </video>
