--- a/about_us.html
+++ b/about_us.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>VSB-MOTORS/MY-TRANSACTION</title>
+    <title>VSB-MOTORS/ABOUT-US</title>
    <!-- ionicons Fonts for icons -->
    <link href="css/ionicons.min.css" rel="stylesheet">
    <!--Font for nav-bar-->
