--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
                               <a href="sell_my_car.html">Sell your car</a>
                            </li>
                            <li>
-                              <a href="#">Contact</a>
+                              <!--<h4 class="user_icon"><i class="bi bi-person-circle"></i></h4>-->
+                              <a href="">Sign-In</a>
                            </li>
                            <li>
-                              <h4 class="user_icon"><i class="bi bi-person-circle"></i><!--<i class="bi bi-person-fill">--></i></h4>
+                              <!--<h4 class="user_icon"><i class="bi bi-person-circle"></i></h4>-->
+                              <a href="#">Sign-Up</a>
                            </li>
                         </ul>
                      </nav>
