--- a/sign_up.html
+++ b/sign_up.html
@@ -1,16 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>VSB-MOTORS/SIGN-UP</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/64d58efce2.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="css/sign_up.css" />
+    <title>Sign in & Sign up Form</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="forms-container">
+        <div class="signin-signup">
+          <form action="#" class="sign-in-form">
+            <img src="images/imglogo.PNG" class="image" alt="" />
 
-    <link href="css/login.css" rel="stylesheet">
+            <h2 class="title">Registrati come Vendor</h2>
+            <div class="input-field">
+              <i class="fas fa-user"></i>
+              <input type="text" placeholder="Username" />
+            </div>
+            <div class="input-field">
+              <i class="fas fa-lock"></i>
+              <input type="password" placeholder="Password" />
+            </div>
+            <input type="submit" value="Login" class="btn solid" />
+          </form>
+          <form action="#" class="sign-up-form">
+            <table>
+                <img src="images/imglogo.PNG" class="image" alt="" />
 
-</head>
-<body>
-   
-</body>
+                <thead><h2 class="title">Registrazione Cliente</h2></thead>
+                    <tr>
+                        <td>
+                            <div class="input-field">
+                                <i class="fas fa-user"></i>
+                                <input type="text" placeholder="Nome" />
+                              </div>
+                        </td>
+                        <td>
+                            <div class="input-field">
+                                <i class="fas fa-user"></i>
+                                <input type="text" placeholder="Cognome" />
+                              </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="input-field">
+                                <i class="fas fa-phone" aria-hidden="false"></i>
+                                <input type="text" placeholder="Telefono" />
+                              </div>
+                        </td>
+                        <td>
+                            <div class="input-field">
+                                <i class="fas fa-phone"></i>
+                                <input type="text" placeholder="Mail" />
+                              </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="input-field">
+                                <i class="fas fa-lock"></i>
+                                <input type="text" placeholder="Password" />
+                              </div>
+                        </td>
+                        <td>
+                            <div class="input-field">
+                                <i class="fas fa-lock"></i>
+                                <input type="text" placeholder="Conferma Password" />
+                              </div>
+                        </td>
+                    </tr>
+
+            </table>
+
+            <input type="submit" class="btn" value="Sign up" />
+          </form>
+        </div>
+      </div>
+
+      <div class="panels-container">
+        <div class="panel left-panel">
+          <div class="content">
+            <h3> Registrati come cliente </h3>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis,
+              ex ratione. Aliquid!
+            </p>
+            <button class="btn transparent" id="sign-up-btn">
+              Sign up
+            </button>
+          </div>
+        </div>
+        <div class="panel right-panel">
+          <div class="content">
+            <h3>Registrati come Vendor</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
+              laboriosam ad deleniti.
+            </p>
+            <button class="btn transparent" id="sign-in-btn">
+              Sign in
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="js/app.js"></script>
+  </body>
 </html>
