--- a/sign_up.html
+++ b/sign_up.html
@@ -8,7 +8,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="css/sign_up.css" />
-    <title>Sign in & Sign up Form</title>
+    <title>Sign in & Sign up</title>
   </head>
   <body>
     <div class="container">
@@ -16,7 +16,7 @@
         <div class="signin-signup">
           <form action="#" class="sign-in-form">
             <table>
-                <img src="images/imglogo.PNG" class="image" alt="" />
+                <img src="images/logo.png" class="image" alt="" />
 
                 <thead><h2 class="title">Registrazione Vendor</h2></thead>
                 
@@ -30,7 +30,7 @@
                 <td>
                     <div class="input-field">
                         <i class="fas fa-industry"></i>
-                        <input type="number" placeholder="Partita IVA" />
+                        <input type="text" placeholder="Partita IVA" />
                       </div>
                 </td>
             </tr>
@@ -38,13 +38,13 @@
                 <td>
                     <div class="input-field">
                         <i class="fas fa-envelope" aria-hidden="false"></i>
-                        <input type="text" placeholder="Mail" />
+                        <input type="text" placeholder="Email" />
                       </div>
                 </td>
                 <td>
                     <div class="input-field">
                         <i class="fas fa-map"></i>
-                        <input type="number" placeholder="Indirizzo" />
+                        <input type="text" placeholder="Indirizzo" />
                       </div>
                 </td>
             </tr>
@@ -82,7 +82,7 @@
           </form>
           <form action="#" class="sign-up-form">
             <table>
-                <img src="images/imglogo.PNG" class="image" alt="" />
+                <img src="images/logo.png" class="image" alt="" />
 
                 <thead><h2 class="title">Registrazione Cliente</h2></thead>
                     <tr>
@@ -109,7 +109,7 @@
                         <td>
                             <div class="input-field">
                                 <i class="fas fa-envelope"></i>
-                                <input type="text" placeholder="Mail" />
+                                <input type="text" placeholder="Email" />
                               </div>
                         </td>
                     </tr>
