--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   <div class="header-table col-md-12">
                      <div class="brand">
                         <a href="index.html">
-                           <img src="/images/imglogo.png" alt="">
+                           <img src="/images/logo.png" alt="">
                         </a>
                      </div>
                      <nav id="nav-wrap" class="main-nav">
@@ -65,13 +65,14 @@
                               <a href="sell_my_car.html">Sell your car</a>
                            </li>
                            <li>
-                              <!--<h4 class="user_icon"><i class="bi bi-person-circle"></i></h4>-->
-                              <a href="">Sign-In</a>
+                              <a href="#">Sign-In</a>
                            </li>
                            <li>
-                              <!--<h4 class="user_icon"><i class="bi bi-person-circle"></i></h4>-->
-                              <a href="#">Sign-Up</a>
+                              <a href="sign_up.html">Sign-Up</a>
                            </li>
+                           <!--<li>
+                              <h4 class="user_icon"><i class="bi bi-person-circle"></i></h4>
+                           </li>-->
                         </ul>
                      </nav>
                   </div>
