--- a/shop.html
+++ b/shop.html
@@ -24,7 +24,7 @@
             <div class="header-table col-md-12">
                <div class="brand">
                   <a href="index.html">
-                     <img src="/images/imglogo.png" alt="">
+                     <img src="/images/logo.png" alt="">
                   </a>
                </div>
                <nav id="nav-wrap" class="main-nav">
@@ -40,11 +40,14 @@
                         <a href="sell_my_car.html">Sell your car</a>
                      </li>
                      <li>
-                        <a href="#">Contact</a>
+                        <a href="#">Sign-In</a>
                      </li>
                      <li>
-                        <h4 class="user_icon"><i class="bi bi-person-circle"></i><!--<i class="bi bi-person-fill">--></i></h4>
+                        <a href="sign_up.html">Sign-Up</a>
                      </li>
+                     <!--<li>
+                        <h4 class="user_icon"><i class="bi bi-person-circle"></i></h4>
+                     </li>-->
                   </ul>
                </nav>
             </div>
@@ -912,5 +915,19 @@
          </tr>
       </table>         
    </div>
+   <script src="js/jquery.min.js"></script>
+   <script src="js/bootstrap.min.js"></script>
+   <script src="js/superfish.js"></script>
+   <script src="js/jquery.easing.js"></script>
+   <script src="js/wow.js"></script>
+   <script src="js/jquery.isotope.min.js"></script>
+   <script src="js/owl.carousel.min.js"></script>
+   <script src="js/jquery.magnific-popup.js"></script>
+   <script src="js/jflickrfeed.min.js"></script>
+   <script src="js/jquery.fitvids.js"></script>
+   <script src="js/jquery.fractionslider.min.js"></script>
+   <script src="js/jquery-ui-1.10.4.custom.min.js"></script>
+   <script type="text/javascript" src="js/SmoothScroll.js"></script>
+   <script src="js/main.js"></script>
 </body>
 </html>
