--- a/single_product.html
+++ b/single_product.html
@@ -25,7 +25,7 @@
             <div class="header-table col-md-12">
                <div class="brand">
                   <a href="index.html">
-                     <img src="/images/imglogo.png" alt="">
+                     <img src="/images/logo.png" alt="">
                   </a>
                </div>
                <nav id="nav-wrap" class="main-nav">
@@ -41,11 +41,14 @@
                         <a href="sell_my_car.html">Sell your car</a>
                      </li>
                      <li>
-                        <a href="#">Contact</a>
+                        <a href="#">Sign-In</a>
                      </li>
                      <li>
-                        <h4 class="user_icon"><i class="bi bi-person-circle"></i><!--<i class="bi bi-person-fill">--></i></h4>
+                        <a href="sign_up.html">Sign-Up</a>
                      </li>
+                     <!--<li>
+                        <h4 class="user_icon"><i class="bi bi-person-circle"></i></h4>
+                     </li>-->
                   </ul>
                </nav>
             </div>
