--- a/sign_up.html
+++ b/sign_up.html
@@ -16,7 +16,7 @@
         <div class="signin-signup">
           <form action="#" class="sign-in-form">
             <table>
-                <img src="images/logo.png" class="image" alt="" />
+                <img src="images/logo2.png" class="image" alt="" />
 
                 <thead><h2 class="title">Registrazione Vendor</h2></thead>
                 
@@ -78,11 +78,11 @@
                     </tr>
 
             </table>
-            <input type="submit" value="Login" class="btn solid" />
+            <input type="submit" value="Submit" class="btn solid" />
           </form>
           <form action="#" class="sign-up-form">
             <table>
-                <img src="images/logo.png" class="image" alt="" />
+                <img src="images/logo2.png" class="image" alt="" />
 
                 <thead><h2 class="title">Registrazione Cliente</h2></thead>
                     <tr>
@@ -130,7 +130,7 @@
 
             </table>
 
-            <input type="submit" class="btn" value="Sign up" />
+            <input type="submit" class="btn" value="submit" />
           </form>
         </div>
       </div>
@@ -143,7 +143,7 @@
                Con noi avrai accesso all'inventario di tuttI Vendors Partner presenti in Italia e potrai scegliere l'auto più adatta alle tue esigenze.
             </p>
             <button class="btn transparent" id="sign-up-btn">
-              Sign up
+              Sign Up
             </button>
           </div>
         </div>
@@ -154,13 +154,12 @@
                 Garantiamo visibilità ai nostri Vendors Partner, andando incontro sia alle vostre esigenze che quella dei vostri futuri clienti.
             </p>
             <button class="btn transparent" id="sign-in-btn">
-              Sign in
+              Sign Up
             </button>
           </div>
         </div>
       </div>
     </div>
-
     <script src="js/app.js"></script>
   </body>
 </html>
