--- a/my_transaction.html
+++ b/my_transaction.html
@@ -24,7 +24,7 @@
             <div class="header-table col-md-12">
                <div class="brand">
                   <a href="index.html">
-                     <img src="/images/logo.png" alt="">
+                     <img src="/images/logo2.png" alt="">
                   </a>
                </div>
                <nav id="nav-wrap" class="main-nav">
