add filter function

--- a/shop.html
+++ b/shop.html
@@ -24,7 +24,7 @@
             <div class="header-table col-md-12">
                <div class="brand">
                   <a href="index.html">
-                     <img src="/images/logo2.png" alt="">
+                     <img src="/images/logo.png" alt="">
                   </a>
                </div>
                <nav id="nav-wrap" class="main-nav">
@@ -53,6 +53,21 @@
             </div>
          </div>
       </div>
+   </div>
+
+   <div class="filters_container">
+      <table class="filters">
+         <tr>
+            <td>
+               <input type="radio" name="nuovo">Nuovo
+            </td>
+         </tr>
+         <tr>
+            <td>
+               <input type="radio" name="usato" id="">Usato
+            </td>
+         </tr>
+      </table>   
    </div>
 
    <div class="container_card">
