--- a/sign_up.html
+++ b/sign_up.html
@@ -16,7 +16,7 @@
         <div class="signin-signup">
           <form action="#" class="sign-in-form">
             <table>
-                <img src="images/logo2.png" class="image" alt="" />
+                <img src="images/logo.png" class="image" alt=""/>
 
                 <thead><h2 class="title">Registrazione Vendor</h2></thead>
                 
@@ -82,7 +82,7 @@
           </form>
           <form action="#" class="sign-up-form">
             <table>
-                <img src="images/logo2.png" class="image" alt="" />
+                <img src="images/logo.png" class="image" alt="" />
 
                 <thead><h2 class="title">Registrazione Cliente</h2></thead>
                     <tr>
