--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   <div class="header-table col-md-12">
                      <div class="brand">
                         <a href="index.html">
-                           <img src="/images/logo2.png" width="120" height="120">
+                           <img src="/images/logo.png" style="margin-top: 10px;">
                         </a>
                      </div>
                      <nav id="nav-wrap" class="main-nav">
@@ -88,25 +88,25 @@
             <div class="fs_loader"></div>
             <div class="slide">
                <img data-fixed class="slide-bg" src="images/features_bg.jpg" alt="Slide">
-               <!--<img data-position="155,554" data-delay="300" data-in="fade" data-out="fade" src="images/slider/e1.png" alt="Enfold">
+               <img data-position="155,554" data-delay="300" data-in="fade" data-out="fade" src="images/slider/e1.png" alt="Enfold">
                <img data-position="185,430" data-delay="600" data-in="fade" data-out="fade" src="images/slider/e2.png" alt="Enfold">
                <img data-position="236,449" data-delay="1000" data-in="fade" data-out="fade" src="images/slider/e3.png" alt="Enfold">
                <img data-position="322,468" data-delay="1400" data-in="fade" data-out="fade" src="images/slider/e4.png" alt="Enfold">
-               <img data-position="384,446" data-delay="1800" data-in="fade" data-out="fade" src="images/slider/e5.png" alt="Enfold">-->
+               <img data-position="384,446" data-delay="1800" data-in="fade" data-out="fade" src="images/slider/e5.png" alt="Enfold">
             </div>
             <div class="slide">
                <img data-fixed class="slide-bg" src="images/slide001.jpg" alt="Slide">
-               <!--<img data-position="108,282" data-delay="300" data-in="fade" data-out="fade" src="images/slider/s2e1.png" alt="Enfold">
+               <img data-position="108,282" data-delay="300" data-in="fade" data-out="fade" src="images/slider/s2e1.png" alt="Enfold">
                <img data-position="262,131" data-delay="600" data-in="fade" data-out="fade" src="images/slider/s2e2.png" alt="Enfold">
                <img data-position="322,202" data-delay="1000" data-in="fade" data-out="fade" src="images/slider/s2e3.png" alt="Enfold">
-               <img data-position="369,60" data-delay="1400" data-in="fade" data-out="fade" src="images/slider/s2e4.png" alt="Enfold">-->
+               <img data-position="369,60" data-delay="1400" data-in="fade" data-out="fade" src="images/slider/s2e4.png" alt="Enfold">
             </div>
             <div class="slide">
                <img data-fixed class="slide-bg" src="images/slide3.jpg" alt="Slide">
-               <!--<img data-position="93,505" data-delay="300" data-in="fade" data-out="fade" src="images/slider/deer.png" alt="Enfold">
+               <img data-position="93,505" data-delay="300" data-in="fade" data-out="fade" src="images/slider/deer.png" alt="Enfold">
                <img data-position="263,274" data-delay="600" data-in="fade" data-out="fade" src="images/slider/s3e1.png" alt="Enfold">
                <img data-position="338,316" data-delay="1000" data-in="fade" data-out="fade" src="images/slider/s2e4.png" alt="Enfold">
-               <a data-position="440,485" data-delay="1500" data-in="fade" data-out="fade" class="button white-color">Purchase Theme </a>-->
+               <a data-position="440,485" data-delay="1500" data-in="fade" data-out="fade" class="button white-color">Purchase Theme </a>
             </div>
          </div>
       </div>
