modify navbar, sign_in, sell_your_car

--- a/my_transaction.html
+++ b/my_transaction.html
@@ -40,14 +40,20 @@
                         <a href="sell_my_car.html">Sell your car</a>
                      </li>
                      <li>
-                        <a href="#">Sign-In</a>
+                        <a href="">Contact</a>
                      </li>
                      <li>
-                        <a href="sign_up.html">Sign-Up</a>
+                        <a href="">About</a>
                      </li>
-                     <!--<li>
-                        <h4 class="user_icon"><i class="bi bi-person-circle"></i></h4>
-                     </li>-->
+                     <li class="has-children">
+                        <h2 class="user_icon"><i class="bi bi-person-circle"></i></h2>
+                        <ul class="dropdown">
+                           <li><a href="sign_up.html">SIGN UP</a></li>
+                           <li><a href="sign_up.html">SIGN IN</a></li>
+                           <li><a href="my_transaction.html">MY TRANSACTION</a></li>
+                           <li><a href="#">LOG OUT</a></li>
+                        </ul>
+                     </li>
                   </ul>
                </nav>
             </div>
