--- a/sign_up.html
+++ b/sign_up.html
@@ -8,7 +8,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="css/sign_up.css" />
-    <title>Sign in & Sign up</title>
+    <title>VSB-MOTORS/SIGN-UP</title>
   </head>
   <body>
     <div class="container">
