--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   <div class="header-table col-md-12">
                      <div class="brand">
                         <a href="index.html">
-                           <img src="/images/logo.png" style="margin-top: 10px;">
+                           <img src="/images/logo.png" style="margin-top: 10px; height: auto; width: 100%;">
                         </a>
                      </div>
                      <nav id="nav-wrap" class="main-nav">
@@ -66,9 +66,6 @@
                            </li>
                            <li>
                               <a href="">Contact</a>
-                           </li>
-                           <li>
-                              <a href="">About</a>
                            </li>
                            <li class="has-children">
                               <h3 class="user_icon"><i class="bi bi-person-circle"></i></h3>
