--- a/shop.html
+++ b/shop.html
@@ -46,10 +46,10 @@
                         <a href="">About</a>
                      </li>
                      <li class="has-children">
-                        <h2 class="user_icon"><i class="bi bi-person-circle"></i></h2>
+                        <h3 class="user_icon"><i class="bi bi-person-circle"></i></h3>
                         <ul class="dropdown">
                            <li><a href="sign_up.html">SIGN UP</a></li>
-                           <li><a href="sign_up.html">SIGN IN</a></li>
+                           <li><a href="sign_in.html">SIGN IN</a></li>
                            <li><a href="my_transaction.html">MY TRANSACTION</a></li>
                            <li><a href="#">LOG OUT</a></li>
                         </ul>
