--- a/sign_in.html
+++ b/sign_in.html
@@ -29,7 +29,7 @@
                             <div class="row">
                                 <div class="col">
                                     <span class="profile-img">
-                                        <img src="/images/logo.png">
+                                        <img src="/images/logo.png" class="responsive">
                                     </span>
                                 </div>
                             </div>
