--- a/my_transaction.html
+++ b/my_transaction.html
@@ -42,10 +42,7 @@
                      <li>
                         <a href="">Contact</a>
                      </li>
-                     <li>
-                        <a href="">About</a>
-                     </li>
-                     <li class="has-children">
+                     <li class="has-children" style="width: 6%; height: auto;">
                         <h3 class="user_icon"><i class="bi bi-person-circle"></i></h3>
                         <ul class="dropdown">
                            <li><a href="sign_up.html">SIGN UP</a></li>
